2024-08-06_exainfra_kubernetes/day3/counter-manifests/frontend_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: main
          image: ghcr.io/ondrejsika/counter-frontend
          ports:
            - name: http
              containerPort: 3000
          startupProbe:
            httpGet:
              path: /api/livez
              port: http
          livenessProbe:
            httpGet:
              path: /api/livez
              port: 3000
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 600m
              memory: 400Mi
