2024-08-06_exainfra_kubernetes/day3/counter-manifests/backend_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ondrej-backend.k8s.sikademo.com
      secretName: ondrej-backend.k8s.sikademo.com-tls
  rules:
    - host: ondrej-backend.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
